# reduced_state_caldeira_leggett

./: .gitmodules  README.md  myscript.prof  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/wannier90/: devcontainer-feature.json  install.sh
examples/: kernel.py  main.py
examples/data/HNi/: stochastic.2.3.1000.500.500.milsten.0.npz  stochastic.2.31.100.50.500.milsten.0.npz  stochastic.4.20.1000.500.500.milsten.0.npz  stochastic.4.3.1000.500.500.milsten.0.npz  stochastic.6.3.1000.1000.500.milsten.0.npz  stochastic.6.3.1000.500.500.milsten.0.npz
examples/data/LiCu/: stochastic.4.5.100.50.500.milsten.0.npz
examples/data/LiFree/: stochastic.2.3.1000.500.500.milsten.0.npz  stochastic.3.20.1000.500.500.milsten.0.npz  stochastic.6.3.1000.1000.500.milsten.0.npz
reduced_state_caldeira_leggett/: dynamics.py  plot.py  system.py
